@@ -1,3 +1,7 @@
+2005-11-05  Kazu Hirata  <kazu@codesourcery.com>
+
+	* decl2.c, init.c, typeck.c: Fix comment typos.
+
 2005-11-04  Richard Guenther  <rguenther@suse.de>
 
 	PR c++/22487
